# GooseCompass

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/planning/: description_milestone.md  description_mvp.md  technical_architecture_milestone.md  technical_architecture_mvp.md
.claude/planning/tasks/: TASKS_MILESTONE.md  TASKS_MILESTONE_0_FOUNDATION.md  TASKS_MILESTONE_1_AUTH.md  TASKS_MILESTONE_2_MONITORING.md  TASKS_MILESTONE_3_PLANNER.md  TASKS_MILESTONE_4_FRONTEND.md  TASKS_MILESTONE_5_DEPLOYMENT.md
.claude/skills/frontend_design/: DESIGN.md  SKILL.md
backend/: config.py  db.py
backend/api/: app.py
backend/api/routes/: query.py
backend/generation/: agent.py  models.py  pipeline.py  prompt.py  rewriter.py
backend/ingestion/: chunker.py  embedder.py  loader.py  models.py  pipeline.py  store.py
backend/retrieval/: models.py  pipeline.py  rrf.py  text_search.py  vector_search.py
backend/tests/: test_config.py  test_db.py
backend/tests/api/: test_app.py  test_cors.py  test_query.py  test_stream.py
backend/tests/generation/: test_agent.py  test_models.py  test_pipeline.py  test_prompt.py  test_rewriter.py
backend/tests/ingestion/: test_chunker.py  test_embedder.py  test_loader.py  test_models.py  test_pipeline.py  test_store.py
docs/: TASKS.md  project_description.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  types.ts
scripts/: example.sources.json  ingest.py  smoke.sh  validate_generation.py  validate_retrieval.py  waterloo_passport_scrape.py
(+24 files in other folders)
